@@ -1,3 +1,8 @@
+Wed Jun 16 12:01:10 UTC 2010  Martin Corino  <mcorino@remedy.nl>
+
+        * DAnCE/NodeApplicationManager/NodeApplicationManager_Impl.cpp:
+	  Change to prevent loss of plan information.
+
 Wed Jun 16 11:37:27 UTC 2010  Marcel Smit  <msmit@remedy.nl>
 
         * bin/ciao_tests.lst:
